# promatlas

./: .gitignore  README.md  pyproject.toml
scripts/: build_all.py  download_all_data.py  run_app.sh
src/promatlas/: __init__.py
src/promatlas/app/: main.py
src/promatlas/config/: __init__.py  settings.py
src/promatlas/db/: __init__.py  load.py  schema.py
src/promatlas/etl/: __init__.py  bdap_bilanci.py  bdi_credit.py  istat_sectors.py  istat_territory.py  openbilanci.py  utils.py
src/promatlas/features/: __init__.py  credit_risk.py  municipal_fiscal.py  sector_resilience.py
tests/: __init__.py  test_basic.py
